--- a/source/index.html
+++ b/source/index.html
@@ -95,8 +95,8 @@
           <h2 class="visually-hidden">Добавление элементов</h2>
           <div class="add-items__item">
             <button class="add-items__button button">
-              <svg class="button__icon" width="15" height="12">
-                <use xlink:href="img/sprite.svg#icon-project"></use>
+              <svg class="button__icon" width="20" height="17">
+                <use xlink:href="img/sprite.svg#icon-add"></use>
               </svg>
               <span class="button__text">Проект</span>
             </button>
@@ -107,8 +107,8 @@
           </div>
           <div class="add-items__item">
             <button class="add-items__button button">
-              <svg class="button__icon" width="15" height="12">
-                <use xlink:href="img/sprite.svg#icon-project"></use>
+              <svg class="button__icon" width="20" height="17">
+                <use xlink:href="img/sprite.svg#icon-add"></use>
               </svg>
               <span class="button__text">Категория</span>
             </button>
@@ -119,8 +119,8 @@
           </div>
           <div class="add-items__item">
             <button class="add-items__button button">
-              <svg class="button__icon" width="13" height="14">
-                <use xlink:href="img/sprite.svg#icon-card"></use>
+              <svg class="button__icon" width="20" height="17">
+                <use xlink:href="img/sprite.svg#icon-add"></use>
               </svg>
               <span class="button__text">
                 Карточка
