update login, add  restore page

--- a/source/p-restore.html
+++ b/source/p-restore.html
@@ -36,38 +36,13 @@
         </div>
         <div class="login__container">
           <div class="login__wrapper login__wrapper--active">
-            <h2 class="login__title">Авторизация</h2>
+            <h2 class="login__title">Восстановление пароля</h2>
             <form action="/" class="login__form">
               <label class="login__input-wrapper">
                 <span class="visually-hidden">Введите e-mail</span>
                 <input type="text" name="email" class="login__input" placeholder="Введите e-mail">
               </label>
-              <label class="login__input-wrapper">
-                <span class="visually-hidden">Введите пароль</span>
-                <input type="text" name="password" class="login__input" placeholder="Введите пароль">
-              </label>
-              <button class="login__sunbmit button button--form">Войти</button>
-              <a href="#" class="login__restore">Забыли пароль?</a>
-            </form>
-          </div>
-          <div class="login__wrapper">
-            <h2 class="login__title">Регистрация</h2>
-            <form action="/" class="login__form">
-              <label class="login__input-wrapper">
-                <span class="visually-hidden">Введите e-mail</span>
-                <input type="text" name="email" class="login__input login__input--succes" placeholder="Введите e-mail">
-                <span class="login__message login__message--succes">Веден правильный e-mail</span>
-              </label>
-              <label class="login__input-wrapper">
-                <span class="visually-hidden">Введите пароль</span>
-                <input type="text" name="password" class="login__input login__input--error" placeholder="Введите пароль">
-                <span class="login__message login__message--error">Слишком короткий пароль</span>
-              </label>
-              <label class="login__input-wrapper">
-                <span class="visually-hidden">Подтвердите пароль</span>
-                <input type="text" name="repassword" class="login__input" placeholder="Подтвердите пароль">
-              </label>
-              <button class="login__sunbmit button button--form">Регистрация</button>
+              <button class="login__sunbmit button button--form">Восстановить</button>
             </form>
           </div>
         </div>
@@ -84,9 +59,6 @@
         </p>
       </div>
     </footer>
-  </div>
-  <div class="toast toast--error">
-    <p class="toast__text">Такого пользователя не существует</p>
   </div>
   <script src="js/bundle.js"></script>
 </body>
